Add support for reading system compressed files
System compression is a feature that allows rarely modified files to be
compressed using the XPRESS or LZX compression formats.  It is not built
directly into NTFS but rather is implemented using reparse points.  This
feature appeared in Windows 10 and it appears that many Windows 10
systems have been using it by default.

This patch adds read support only; write support is probably best
delegated to a third-party tool.

--- a/libntfs-3g/Makefile.am
+++ b/libntfs-3g/Makefile.am
@@ -25,6 +25,8 @@ libntfs_3g_la_SOURCES =	\
 	compat.c 	\
 	compress.c 	\
 	debug.c 	\
+	decompress_common.c \
+	decompress_common.h \
 	device.c 	\
 	dir.c 		\
 	ea.c 		\
@@ -35,6 +37,7 @@ libntfs_3g_la_SOURCES =	\
 	lcnalloc.c 	\
 	logfile.c 	\
 	logging.c 	\
+	lzx_decompress.c\
 	mft.c 		\
 	misc.c 		\
 	mst.c 		\
@@ -43,9 +46,11 @@ libntfs_3g_la_SOURCES =	\
 	reparse.c 	\
 	runlist.c 	\
 	security.c 	\
+	system_compression.c	\
 	unistr.c 	\
 	volume.c 	\
-	xattrs.c
+	xattrs.c	\
+	xpress_decompress.c
 
 if NTFS_DEVICE_DEFAULT_IO_OPS
 if WINDOWS
