--- a/src/ntfs-3g.8.in
+++ b/src/ntfs-3g.8.in
@@ -106,6 +106,11 @@ cat some.mp3:artist
 Named data streams act like normal files, so you can read from them, write to
 them and even delete them (using rm).  You can list all the named data streams
 a file has by getting the "ntfs.streams.list" extended attribute.
+.SS System Compression
+\fBntfs-3g\fR will transparently read from files compressed with the "system
+compression" feature.  However, writing to such files is not supported.  Note
+that "system compression" is a new feature that first appeared in Windows 10 and
+is different from regular NTFS compression.
 .SH OPTIONS
 Below is a summary of the options that \fBntfs-3g\fR accepts.
 .TP
